--- a/cabin/templates/base.html
+++ b/cabin/templates/base.html
@@ -5,13 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{% if title %}{{ title }} &middot; {% endif %}Cabin</title>
   <meta name="description" content="We are makers. We design and build experiences for people and projects we love.">
-  <meta name="viewport" content="width=device-width">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   {% assets 'screen.css' -%}
     <link href="{{ ASSET_URL }}" rel="stylesheet">
   {%- endassets %}
-  {# XXX update to non-dev version #}
-  <script src="/static/vendor/modernizr-latest.js"></script>
+  {# XXX update to non-dev version
+  <script src="/static/vendor/modernizr-latest.js"></script> #}
   {% block extra_head %}{% endblock %}
 </head>
 <body>
