--- a/cabin/templates/base.html
+++ b/cabin/templates/base.html
@@ -17,9 +17,48 @@
   {% block extra_head %}{% endblock %}
 </head>
 <body>
-  <div class="content">{% block content %}{% endblock %}</div>
+  <div id="splash"></div>
 
-  {% assets 'vendor.js', 'site.js' %}
+  {# XXX
+  <nav>
+    <a href="{{ url_for('main.index') }}" class="logo">Cabin</a>
+    <ol>
+      <li><a href="{{ url_for('main.work') }}">Work</a></li>
+      <li><a href="{{ url_for('main.about') }}">About</a></li>
+      <li><a href="{{ url_for('main.lab') }}">Lab</a></li>
+    </ol>
+  </nav>
+  #}
+
+  <div class="content">
+    <header>
+      <h1><a href="{{ url_for('main.index') }}" class="logo">Cabin</a></h1>
+      <a href="{{ url_for('main.work') }}"><hr>Work</a>
+      <a href="{{ url_for('main.about') }}"><hr>About</a>
+      <a href="{{ url_for('main.lab') }}"><hr>Lab</a>
+    </header>
+
+    {% block content %}{% endblock %}
+
+
+  <footer>
+  Studio
+  4216 N Mississippi Ave #315
+  Portland, OR 97217
+
+  Contact
+  <a href="mailto:connect@madebycabin.com">connect@madebycabin.com</a>
+  +1 415 255 5473
+
+  SOCIAL JUNK
+
+  &copy; Cabin 2013
+  x.o.
+  </footer>
+
+  </div>
+
+  {% assets 'vendor.js' %}
     <script src="{{ ASSET_URL }}"></script>
   {%- endassets %}
   {% block scripts %}{% endblock %}
