--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -25,6 +25,23 @@ body > header
   absolute: top left
   right: 0
   display: none
+  padding-top: 15%
+  color: white
+  light-text()
+
+  h1, h2
+    margin: 0 auto
+    text-align: center
+  h1
+    font: bold 50px sans-serif
+    text-transform: uppercase
+  h2
+    font: bold italic 25px/30px Georgia
+    width: 420px
+    max-width: 80%
+    margin-top: 20px
+    border-top: 1px solid rgba(white, .5)
+    padding-top: 20px
 
 nav
   fixed: top left
