--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -40,7 +40,7 @@ body > header
     width: 420px
     max-width: 80%
     margin-top: 20px
-    border-top: 1px solid rgba(white, .5)
+    border-top: 1px solid rgba(white, .2)
     padding-top: 20px
 
 nav
@@ -82,6 +82,8 @@ body.splash-transition
   nav, .main
     transition-property: top, bottom
     transition-duration: 500ms
+    // Take advantage of hardware-accelerated 3D transforms in Mobile Safari.
+    transform: translate3D(0, 0, 0)
 
 
 // iPhone 5 landscape and smaller  ///////////////////////////////////////////
