--- a/cabin/templates/work.html
+++ b/cabin/templates/work.html
@@ -34,6 +34,6 @@
 
 {% block scripts %}
 <script>
-  var h = $('header').backstretch('/static/test-bg.jpg');
+  var h = $('header').backstretch('/static/test-cannon.jpg');
 </script>
 {% endblock %}
