--- a/cabin/templates/base.html
+++ b/cabin/templates/base.html
@@ -23,7 +23,7 @@
   </header>
 
   <nav>
-    <div class="logo"><a href="{{ url_for('main.index') }}">Cabin</a></div>
+    <a href="{{ url_for('main.index') }}" class="logo">Cabin</a>
     <a href="{{ url_for('main.work') }}"><hr>Work</a>
     <a href="{{ url_for('main.about') }}"><hr>About</a>
     <a href="{{ url_for('main.lab') }}"><hr>Lab</a>
