Use top padding instead of margin on .main
.main needs to be set to 100% min-height in order to cover up the splash
during transitions; adding vertical margin to it meant the page would
scroll unnecessarily. Use padding and border-box sizing to keep it to
exactly 100%.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -59,6 +59,7 @@ html, body
   height: 100%
 .main
   background: #fff
+  box-sizing: border-box
   min-height: 100%
   relative: top
 
@@ -114,7 +115,7 @@ body.splash-transition
   body > header
     bottom: nav_height
   .main
-    margin-top: nav_height
+    padding-top: nav_height
 
   footer
     display: none
@@ -163,7 +164,7 @@ body.splash-transition
   body > header
     bottom: nav_height
   .main
-    margin-top: nav_height
+    padding-top: nav_height
 
   footer
     background: cabin_black
