--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{% if title %}{{ title }} &middot; {% endif %}Cabin</title>
+  <title>Cabin{% if title %} &middot; {{ title }}{% endif %}</title>
   <meta name="description" content="We are makers. We design and build experiences for people and projects we love.">
 
   <meta name="viewport" content="initial-scale=1.0">
@@ -19,7 +19,7 @@
 <body{% if splash %} class="splash"{% endif %}>
   <header>
     <h1>Cabin</h1>
-    <h2>Crafting experiences for people &amp; places we love.</h2>
+    <h2>Crafting experiences for people &amp; projects we love.</h2>
   </header>
 
   <nav>
@@ -30,9 +30,11 @@
   </nav>
 
   <div class="main">
-    <div class="content"{% if page %} data-page="{{ page }}"{% endif %}>
+    <section class="content"
+      {%- if title %} data-title="{{ title }}"{% endif %}
+      {%- if page %} data-page="{{ page }}"{% endif %}>
       {% block content %}{% endblock %}
-    </div>
+    </section>
 
     <footer>
       Studio
