--- a/cabin/templates/lab.html
+++ b/cabin/templates/lab.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+  <h1>The Lab</h1>
+
   <p>This page is going to be full of interesting graphs someday.</p>
 
 {% endblock %}
