--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -12,8 +12,8 @@
   {% assets 'screen.css' -%}
     <link href="{{ ASSET_URL }}" rel="stylesheet">
   {%- endassets %}
-  {# XXX update to non-dev version
-  <script src="/static/vendor/modernizr-latest.js"></script> #}
+  {# XXX update to non-dev version #}
+  <script src="/static/vendor/modernizr-latest.js"></script>
   {% block extra_head %}{% endblock %}
 </head>
 <body{% if splash %} class="splash"{% endif %}>
@@ -73,6 +73,6 @@
   {% block scripts %}{% endblock %}
 
   {# XXX for dev only #}
-  <script src="http://10.0.1.3:35729/livereload.js?snipver=1"></script>
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
