--- a/cabin/templates/work.html
+++ b/cabin/templates/work.html
@@ -4,73 +4,58 @@
 
 {% block content %}
 
-  <h1>Selected Goodness</h1>
+  <h1>Selected Work</h1>
 
   <div class="bricks">
-    <a class="work-thumb double" href="/about">
+    <a class="work-thumb feature" href="/about">
       <hr><h2>Pressed Juicery</h2><h3>Website</h3>
-      <img src="http://placehold.it/540x420" alt>
+      <img src="http://placekitten.com/540/420" alt>
     </a>
 
-    <a class="work-thumb">
+    <a class="work-thumb feature">
       <hr><h2>Sketch</h2><h3>Packaging</h3>
-      <img src="http://placehold.it/260x300" alt>
+      <img src="http://placekitten.com/540/550" alt>
     </a>
 
     <a class="work-thumb">
       <hr><h2>Linkhunter</h2><h3>Browser Extension</h3>
-      <img src="http://placehold.it/100x100" alt>
+      <img src="http://placekitten.com/100/100" alt>
     </a>
 
     <a class="work-thumb">
       <hr><h2>Sketch</h2><h3>Packaging</h3>
-      <img src="http://placehold.it/260x300" alt>
+      <img src="http://placekitten.com/540/600" alt>
     </a>
 
     <a class="work-thumb">
       <hr><h2>Pressed Juicery</h2><h3>Brand, Packaging</h3>
-      <img src="http://placehold.it/260x200" alt>
+      <img src="http://placekitten.com/540/400" alt>
+    </a>
+
+    <a class="work-thumb feature" href="/about">
+      <hr><h2>Pressed Juicery</h2><h3>Website</h3>
+      <img src="http://placekitten.com/540/470" alt>
+    </a>
+
+    <a class="work-thumb">
+      <hr><h2>Sketch</h2><h3>Packaging</h3>
+      <img src="http://placekitten.com/540/650" alt>
+    </a>
+
+    <a class="work-thumb">
+      <hr><h2>Linkhunter</h2><h3>Browser Extension</h3>
+      <img src="http://placekitten.com/200/200" alt>
+    </a>
+
+    <a class="work-thumb">
+      <hr><h2>Sketch</h2><h3>Packaging</h3>
+      <img src="http://placekitten.com/540/640" alt>
+    </a>
+
+    <a class="work-thumb">
+      <hr><h2>Pressed Juicery</h2><h3>Brand, Packaging</h3>
+      <img src="http://placekitten.com/540/420" alt>
     </a>
   </div>
 
-{% endblock %}
-
-{% block scripts %}
-  <script>
-  $(function () {
-    var container = $('.bricks');
-    var items = container.find('.work-thumb');
-    var itemWidth = 260;
-    var gutterWidth = 20;
-    var columns = items.length + items.filter('.double').length
-
-    var maxWidthAt = function(n) {
-      return itemWidth * n + gutterWidth * (n - 1);
-    };
-
-    var computeColumnWidth = function () {
-      var max = Math.min($('body > nav').width(), maxWidthAt(columns));
-      for (var n = 1; n <= columns; ++n) {
-        if (maxWidthAt(n) >= max) break;
-      }
-      columnSpace = max - gutterWidth * (n - 1);
-      columnWidth = Math.floor(columnSpace / n);
-
-      container.css('width', max);
-      items.css('width', columnWidth)
-        .filter('.double').css('width', columnWidth * 2 + gutterWidth);
-
-      return columnWidth;
-    };
-
-    container.imagesLoaded(function () {
-      container.masonry({
-        itemSelector: '.work-thumb',
-        columnWidth: computeColumnWidth,
-        gutterWidth: 20,
-        isAnimated: true,
-        isFitWidth: true});
-    });
-  });
-  </script>
 {% endblock %}
