--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -37,18 +37,12 @@
     </section>
 
     <footer>
-      Studio
-      4216 N Mississippi Ave #315
-      Portland, OR 97217
-
-      Contact
-      <a href="mailto:connect@madebycabin.com">connect@madebycabin.com</a>
-      +1 415 255 5473
-
-      SOCIAL JUNK
-
-      &copy; Cabin 2013
-      x.o.
+      <p class="copyright"><span>&copy;</span>Cabin 2013</p>
+      <ol>
+        <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
+        <li>+1 415 255 5473</li>
+        <li class="address">4216 N Mississippi Ave #315<span>&middot;</span>Portland, OR 97217</li>
+      </ol>
     </footer>
   </div>
 
