Update Proxima Nova font files

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -13,13 +13,13 @@ cabin_mustard = #edbc13
 
 body
   color: cabin_black
-  font: 13px/16px ProximaNova, Helvetica Neue, Helvetica, sans-serif
+  font: 13px/1.23 ProximaNova, Helvetica Neue, Helvetica, sans-serif
 
 a
   text-decoration: none
 
 .headline-text
-  font: 30px/1.2 'YWFT Ultramagnetic Light'
+  font: 30px 'YWFT Ultramagnetic Light'
   text-transform: uppercase
 
 .dim-text
@@ -154,7 +154,7 @@ body.splash-transition
     text-transform: uppercase
   h3
     @extends .dim-text
-    margin-bottom: 24px  // XXX revisit; should be 30
+    margin-bottom: 26px
   img
     margin: 0 auto
     display: block
