--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -41,7 +41,8 @@
       <ol>
         <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
         <li>+1 415 255 5473</li>
-        <li class="address">4216 N Mississippi Ave #315<span>&middot;</span>Portland, OR 97217</li>
+        <li class="address"><a href="http://maps.apple.com/?q=4216+N+Mississippi+Ave,+97217">
+          4216 N Mississippi Ave #315<span>&middot;</span>Portland, OR 97217</a></li>
       </ol>
     </footer>
   </div>
