--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -7,6 +7,7 @@ cabin_grey_dark = #929292
 cabin_grey_med = #d2d2d2
 cabin_grey_light = #f2f2f2
 cabin_mustard = #edbc13
+default_tap_highlight_color = rgba(26, 26, 26, 0.3)
 
 
 // Common  ///////////////////////////////////////////////////////////////////
@@ -72,6 +73,9 @@ nav
   fixed: top left
   right: 0
   user-select: none
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  a
+    -webkit-tap-highlight-color: default_tap_highlight_color
   z-index: 2
   .logo
     hide-text()
