Replace LinkedIn with GitHub in social nav

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -31,9 +31,9 @@
       <div class="social">
         <a href="https://twitter.com/madebycabin" target="_blank" class="twitter">Twitter</a>
         <a href="https://www.facebook.com/madebycabin" target="_blank" class="facebook">Facebook</a>
-        <a href="http://www.linkedin.com/company/cabin" target="_blank" class="linkedin">Linkedin</a>
         <a href="http://madebycabin.tumblr.com/" target="_blank" class="tumblr">Tumblr</a>
         <a href="http://www.flickr.com/photos/madebycabin" target="_blank" class="flickr">Flickr</a>
+        <a href="https://github.com/cabin" target="_blank" class="github">GitHub</a>
       </div>
     </div>
     <a class="toggle"><span>+</span></a>
